@@ -829,6 +829,7 @@ END
 
 MEMWATCH DIALOGEX 0, 0, 261, 270
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_ACCEPTFILES
 CAPTION "Memory Watch"
 MENU MEMWATCHMENU
 FONT 8, "MS Sans Serif", 0, 0, 0x0
